--- a/websns-app/templates/index.html
+++ b/websns-app/templates/index.html
@@ -2,6 +2,12 @@
 <html>
 <head><title>ホームページ</title></head>
 <body>
+  <form method="postpagebtn" action="/post">
+  <input type="submit" value="投稿する",name = "postpagebtn", onclick="location.href='/post'">
+  </form>
+  <form method="mypagebtn" action="/mypage">
+    <input type="submit",value="マイページ",name = "mypagebtn">
+  </form>
   <h1>メッセージ一覧</h1>
   <!-- <form action="/post" method="post">
     <input type="text" name="content">
