マイページボタンを追加。

--- a/websns-app/templates/index.html
+++ b/websns-app/templates/index.html
@@ -11,9 +11,9 @@
   <form method="postpagebtn" action="/post">
   <input type="submit" value="投稿する",name = "postpagebtn", onclick="location.href='/post'">
   </form>
-  <form method="mypagebtn" action="/mypage">
-    <input type="submit",value="マイページ",name = "mypagebtn">
-  </form>
+  <form method="GET" action="/mypage">
+    <input type="submit" value="マイページ" name="mypagebtn">
+</form>
   <h1>メッセージ一覧</h1>
   <!-- <form action="/post" method="post">
     <input type="text" name="content">
