--- a/websns-app/static/style.css
+++ b/websns-app/static/style.css
@@ -6,3 +6,10 @@ textarea {
     width: 300px;
     height: 100px;
 }
+
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+}
