フォロー、フォロワーがマイページに表示されるようになりました。

--- a/websns-app/templates/mypage.html
+++ b/websns-app/templates/mypage.html
@@ -3,6 +3,11 @@
 <head><title>mypage</title></head>
 <body>
   <h1>mypage</h1>
-
+  <ul>
+    {% for label, count in follow %}
+      <li><strong>{{ label }}</strong>: {{ count }}</li>
+    {% endfor %}
+  </ul>
 </body>
 </html>
+
