--- a/websns-app/static/login.css
+++ b/websns-app/static/login.css
@@ -18,6 +18,7 @@
   }
   
   input[type="text"],
+  input[type="email"],
   input[type="password"] {
     width: 100%;
     padding: 10px;
@@ -26,8 +27,7 @@
   }
   
   button[type="submit"] {
-    width: 100%;
-    padding: 10px;
+    padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
     border: none;
