--- a/websns-app/templates/register.html
+++ b/websns-app/templates/register.html
@@ -15,17 +15,17 @@
     <form action="{{ url_for('register') }}" method="post">
       <div class="form-group flex items-center mb-4">
         <label for="username" class="w-1/3 font-bold">ユーザー名:</label>
-        <input type="text" id="username" name="username" class="w-2/3 p-2 border rounded">
+        <input type="text" id="username" name="username" class="w-2/3 p-2 border rounded-full">
       </div>
 
       <div class="form-group flex items-center mb-4">
         <label for="email" class="w-1/3 font-bold">Eメール:</label>
-        <input type="email" id="email" name="email" class="w-2/3 p-2 border rounded">
+        <input type="email" id="email" name="email" class="w-2/3 p-2 border rounded-full">
       </div>
 
       <div class="form-group flex items-center mb-6">
         <label for="password" class="w-1/3 font-bold">パスワード:</label>
-        <input type="password" id="password" name="password" class="w-2/3 p-2 border rounded">
+        <input type="password" id="password" name="password" class="w-2/3 p-2 border rounded-full">
       </div>
 
       <!-- 登録ボタンを右下に配置 -->
