--- a/websns-app/templates/register.html
+++ b/websns-app/templates/register.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新規登録画面</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>新規登録画面</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../static/register.css">
 </head>
-<body>
-    <h2>新規登録</h2>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+
+  <div class="login-container">
+    <h2 class="text-2xl font-bold text-center mb-6">新規登録</h2>
+
     <form action="{{ url_for('register') }}" method="post">
-        <label for="username">ユーザー名:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">パスワード:</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="登録">
+      <div class="form-group flex items-center mb-4">
+        <label for="username" class="w-1/3 font-bold">ユーザー名:</label>
+        <input type="text" id="username" name="username" class="w-2/3 p-2 border rounded">
+      </div>
+
+      <div class="form-group flex items-center mb-6">
+        <label for="password" class="w-1/3 font-bold">パスワード:</label>
+        <input type="password" id="password" name="password" class="w-2/3 p-2 border rounded">
+      </div>
+
+
+      <div class="flex justify-end">
+        <button type="submit" class="submit-button">登録</button>
+      </div>
     </form>
-    <br>
-    <p>ログインの場合は<a href="/login"></a>こちら。</p>
+
+    <p class="text-center mt-4">
+      ログインの場合は<a href="/login" class="text-blue-600 hover:underline">こちら</a>。
+    </p>
+  </div>
+
 </body>
 </html>
