--- a/websns-app/templates/register.html
+++ b/websns-app/templates/register.html
@@ -30,7 +30,8 @@
 
       <!-- 登録ボタンを右下に配置 -->
       <div class="flex justify-end">
-        <button type="submit" class="submit-button">登録</button>
+        <button type="submit" class="submit-button"><a href="./" class="hover:underline">登録</a>
+    </button>
       </div>
     </form>
 
